Fix alignement with icon

--- a/src/components/UI/Button.module.scss
+++ b/src/components/UI/Button.module.scss
@@ -67,3 +67,7 @@
 .icon {
   margin-right: 1rem;
 }
+
+.linkButton {
+  align-items: normal;
+}
